[gd_scene load_steps=7 format=4 uid="uid://dlay8xrpysfme"]

[ext_resource type="Script" path="res://Level/sections/section.gd" id="1_584y7"]
[ext_resource type="TileSet" uid="uid://dh5umrf15i87n" path="res://Level/sections/tiles.tres" id="2_0g2j2"]
[ext_resource type="Script" path="res://Level/sections/Section1.gd" id="3_rja8f"]
[ext_resource type="PackedScene" uid="uid://bibh62tpa3y6t" path="res://Level/props/button.tscn" id="4_685rf"]
[ext_resource type="PackedScene" uid="uid://dur7nx6n5ftsn" path="res://Level/props/door.tscn" id="5_feacu"]
[ext_resource type="PackedScene" uid="uid://xh14mlxn1gre" path="res://Level/props/cable_straight.tscn" id="6_0plre"]

[node name="Section1" type="Node2D"]
script = ExtResource("1_584y7")

[node name="nextSpot" type="Marker2D" parent="."]
position = Vector2(0, -144)

[node name="Tiles" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAD5////AgAAAAAAAAD6////AgAAAAAAAAD7////AgAAAAAAAAD8////AgABAAEAAAD9////AgABAAEAAAD+////AgABAAEAAAD/////AgABAAEAAAAAAP//AgABAAEAAAABAP//AgABAAEAAAACAP//AgABAAEAAAADAP//AgABAAEAAAAEAP//AgAAAAAAAAAFAP//AgAAAAAAAAAGAP//AgAAAAAAAAAHAP//AgAAAAAAAAAHAPj/AgABAAEAAAAIAPj/AgABAAEAAAAJAPj/AgABAAEAAAAKAPj/AgABAAEAAAAMAPj/AgABAAEAAAANAPj/AgABAAEAAAD9//P/AgAAAAAAAAD8//P/AgAAAAAAAAD7//P/AgAAAAAAAAD6//P/AgAAAAAAAAD5//P/AgABAAEAAAD4//P/AgAAAAAAAAD3//P/AgAAAAAAAAD2//P/AgAAAAAAAAD1//P/AgAAAAAAAAABAO//AgAAAAAAAAACAO//AgAAAAAAAAADAO//AgAAAAAAAAAEAO//AgAAAAAAAAAFAO//AgAAAAAAAAAGAO//AgAAAAAAAAAHAO//AgAAAAAAAAAIAO//AgAAAAAAAAD2/+7/AgAAAAAAAAD3/+7/AgAAAAAAAAD4/+7/AgAAAAAAAAD5/+7/AgAAAAAAAAD6/+7/AgAAAAAAAAD8/+7/AgAAAAAAAAD7/+7/AgAAAAAAAAD9/+7/AgAAAAAAAAD+/+7/AgAAAAAAAAD//+7/AgAAAAAAAAAAAO7/AgAAAAAAAAABAO7/AgAAAAAAAAACAO7/AgAAAAAAAAADAO7/AgAAAAAAAAAEAO7/AgAAAAAAAAAFAO7/AgAAAAAAAAAGAO7/AgAAAAAAAAAHAO7/AgAAAAAAAAAIAO7/AgAAAAAAAAAJAO7/AgAAAAAAAAAKAO7/AgAAAAAAAAD1/+7/AgAAAAAAAAD1/+//AgAAAAAAAAD1//D/AgAAAAAAAAD1//H/AgAAAAAAAAD1//L/AgAAAAAAAAD1//T/AgABAAEAAAD1//X/AgAAAAAAAAD1//b/AgAAAAAAAAD1//f/AgAAAAAAAAD1//j/AgABAAEAAAD1//n/AgAAAAAAAAD1//r/AgAAAAAAAAD1//v/AgAAAAAAAAD1//z/AgAAAAAAAAD1//3/AgAAAAAAAAD1//7/AgAAAAAAAAD1////AgAAAAAAAAD2/+//AgAAAAAAAAD2//D/AgAAAAAAAAD2//H/AgAAAAAAAAD2//L/AgAAAAAAAAD2//T/AgABAAEAAAD2//X/AgAAAAAAAAD2//b/AgAAAAAAAAD2//f/AgAAAAAAAAD2//j/AgABAAEAAAD2//n/AgAAAAAAAAD2//r/AgAAAAAAAAD2//v/AgAAAAAAAAD2//z/AgAAAAAAAAD2//3/AgAAAAAAAAD2//7/AgAAAAAAAAD2////AgAAAAAAAAD3/+//AgAAAAAAAAD3//D/AgAAAAAAAAD3//H/AgAAAAAAAAD3//L/AgAAAAAAAAD3//T/AgAAAAAAAAD3//X/AgAAAAAAAAD3//b/AgAAAAAAAAD3//f/AgAAAAAAAAD3//j/AgABAAEAAAD3//n/AgAAAAAAAAD3//r/AgAAAAAAAAD3//v/AgAAAAAAAAD3//z/AgAAAAAAAAD3//3/AgAAAAAAAAD3//7/AgAAAAAAAAD3////AgAAAAAAAAD4/+//AgAAAAAAAAD4//D/AgAAAAAAAAD4//H/AgAAAAAAAAD4//L/AgAAAAAAAAD4//T/AgAAAAAAAAD4//X/AgAAAAAAAAD4//b/AgAAAAAAAAD4//f/AgAAAAAAAAD4//j/AgABAAEAAAD4//n/AgAAAAAAAAD4//r/AgAAAAAAAAD4//v/AgAAAAAAAAD4//z/AgAAAAAAAAD4//3/AgAAAAAAAAD4//7/AgAAAAAAAAD4////AgAAAAAAAAD5/+//AgAAAAAAAAD5//D/AgAAAAAAAAD5//H/AgABAAEAAAD5//L/AgABAAEAAAD5//T/AgABAAEAAAD5//b/AgAAAAAAAAD5//f/AgAAAAAAAAD5//j/AgABAAEAAAD5//n/AgAAAAAAAAD5//r/AgAAAAAAAAD5//v/AgAAAAAAAAD5//z/AgAAAAAAAAD5//3/AgAAAAAAAAD5//7/AgAAAAAAAAD6/+//AgAAAAAAAAD6//D/AgAAAAAAAAD6//H/AgABAAEAAAD6//L/AgAAAAAAAAD6//T/AgAAAAAAAAD6//b/AgAAAAAAAAD6//f/AgAAAAAAAAD6//j/AgABAAEAAAD6//n/AgAAAAAAAAD6//r/AgAAAAAAAAD6//v/AgAAAAAAAAD6//z/AgAAAAAAAAD6//3/AgAAAAAAAAD6//7/AgAAAAAAAAD7/+//AgAAAAAAAAD7//D/AgAAAAAAAAD7//H/AgABAAEAAAD7//L/AgAAAAAAAAD7//T/AgAAAAAAAAD7//b/AgAAAAAAAAD7//f/AgAAAAAAAAD7//j/AgABAAEAAAD7//n/AgAAAAAAAAD7//r/AgAAAAAAAAD7//v/AgAAAAAAAAD7//z/AgAAAAAAAAD7//3/AgAAAAAAAAD7//7/AgAAAAAAAAD8/+//AgAAAAAAAAD8//D/AgAAAAAAAAD8//H/AgABAAEAAAD8//L/AgAAAAAAAAD8//T/AgAAAAAAAAD8//b/AgAAAAAAAAD8//f/AgAAAAAAAAD8//j/AgABAAEAAAD8//n/AgAAAAAAAAD8//r/AgAAAAAAAAD8//v/AgAAAAAAAAD8//z/AgAAAAAAAAD8//3/AgAAAAAAAAD8//7/AgAAAAAAAAD9/+//AgAAAAAAAAD9//D/AgAAAAAAAAD9//H/AgABAAEAAAD9//L/AgAAAAAAAAD9//T/AgAAAAAAAAD9//b/AgAAAAAAAAD9//f/AgAAAAAAAAD9//j/AgABAAEAAAD9//n/AgAAAAAAAAD9//r/AgAAAAAAAAD9//v/AgAAAAAAAAD9//z/AgAAAAAAAAD9//3/AgAAAAAAAAD9//7/AgAAAAAAAAD+/+//AgAAAAAAAAD+//D/AgAAAAAAAAD+//H/AgABAAEAAAD+//L/AgAAAAAAAAD+//P/AgAAAAAAAAD+//T/AgAAAAAAAAD+//b/AgAAAAAAAAD+//f/AgAAAAAAAAD+//j/AgABAAEAAAD+//n/AgAAAAAAAAD+//r/AgAAAAAAAAD+//v/AgAAAAAAAAD+//z/AgAAAAAAAAD+//3/AgAAAAAAAAD+//7/AgAAAAAAAAD//+//AgAAAAAAAAD///D/AgAAAAAAAAD///H/AgABAAEAAAD///L/AgAAAAAAAAD///P/AgAAAAAAAAD///T/AgAAAAAAAAD///b/AgAAAAAAAAD///f/AgAAAAAAAAD///j/AgABAAEAAAD///n/AgAAAAAAAAD///r/AgAAAAAAAAD///v/AgAAAAAAAAD///z/AgAAAAAAAAD///3/AgAAAAAAAAD///7/AgAAAAAAAAAAAO//AgAAAAAAAAAAAPD/AgAAAAAAAAAAAPH/AgABAAEAAAAAAPL/AgAAAAAAAAAAAPP/AgAAAAAAAAAAAPT/AgAAAAAAAAAAAPX/AgAAAAAAAAAAAPb/AgAAAAAAAAAAAPf/AgAAAAAAAAAAAPj/AgABAAEAAAAAAPn/AgAAAAAAAAAAAPr/AgAAAAAAAAAAAPv/AgAAAAAAAAAAAPz/AgAAAAAAAAAAAP3/AgAAAAAAAAAAAP7/AgAAAAAAAAABAPD/AgAAAAAAAAABAPH/AgABAAEAAAABAPL/AgAAAAAAAAABAPP/AgAAAAAAAAABAPT/AgAAAAAAAAABAPX/AgAAAAAAAAABAPb/AgAAAAAAAAABAPf/AgAAAAAAAAABAPn/AgAAAAAAAAABAPr/AgAAAAAAAAABAPv/AgAAAAAAAAABAPz/AgAAAAAAAAABAP3/AgAAAAAAAAABAP7/AgAAAAAAAAACAPD/AgAAAAAAAAACAPH/AgABAAEAAAACAPL/AgAAAAAAAAACAPP/AgAAAAAAAAACAPT/AgAAAAAAAAACAPX/AgAAAAAAAAACAPb/AgAAAAAAAAACAPf/AgAAAAAAAAACAPj/AgAAAAAAAAACAPn/AgAAAAAAAAACAPr/AgAAAAAAAAACAPv/AgAAAAAAAAACAPz/AgAAAAAAAAACAP3/AgAAAAAAAAACAP7/AgAAAAAAAAADAPD/AgAAAAAAAAADAPH/AgABAAEAAAADAPL/AgAAAAAAAAADAPP/AgAAAAAAAAADAPT/AgAAAAAAAAADAPX/AgAAAAAAAAADAPb/AgAAAAAAAAADAPf/AgAAAAAAAAADAPj/AgAAAAAAAAADAPn/AgAAAAAAAAADAPr/AgAAAAAAAAADAPv/AgAAAAAAAAADAPz/AgAAAAAAAAADAP3/AgAAAAAAAAADAP7/AgAAAAAAAAAEAPD/AgAAAAAAAAAEAPH/AgABAAEAAAAEAPL/AgAAAAAAAAAEAPP/AgAAAAAAAAAEAPT/AgAAAAAAAAAEAPX/AgAAAAAAAAAEAPb/AgAAAAAAAAAEAPf/AgAAAAAAAAAEAPj/AgAAAAAAAAAEAPn/AgAAAAAAAAAEAPr/AgAAAAAAAAAEAPv/AgABAAEAAAAEAPz/AgAAAAAAAAAEAP3/AgAAAAAAAAAEAP7/AgAAAAAAAAAFAPD/AgAAAAAAAAAFAPH/AgABAAEAAAAFAPL/AgAAAAAAAAAFAPP/AgAAAAAAAAAFAPT/AgAAAAAAAAAFAPX/AgAAAAAAAAAFAPb/AgAAAAAAAAAFAPf/AgAAAAAAAAAFAPj/AgAAAAAAAAAFAPn/AgAAAAAAAAAFAPr/AgAAAAAAAAAFAPv/AgABAAEAAAAFAPz/AgAAAAAAAAAFAP3/AgAAAAAAAAAFAP7/AgAAAAAAAAAGAPD/AgAAAAAAAAAGAPH/AgABAAEAAAAGAPL/AgAAAAAAAAAGAPP/AgAAAAAAAAAGAPT/AgAAAAAAAAAGAPX/AgAAAAAAAAAGAPb/AgAAAAAAAAAGAPf/AgAAAAAAAAAGAPj/AgAAAAAAAAAGAPn/AgAAAAAAAAAGAPr/AgAAAAAAAAAGAPv/AgABAAEAAAAGAPz/AgAAAAAAAAAGAP3/AgAAAAAAAAAGAP7/AgAAAAAAAAAHAPD/AgAAAAAAAAAHAPH/AgABAAEAAAAHAPL/AgAAAAAAAAAHAPP/AgAAAAAAAAAHAPT/AgAAAAAAAAAHAPX/AgAAAAAAAAAHAPb/AgAAAAAAAAAHAPf/AgAAAAAAAAAHAPn/AgAAAAAAAAAHAPr/AgAAAAAAAAAHAPv/AgAAAAAAAAAHAPz/AgAAAAAAAAAHAP3/AgAAAAAAAAAHAP7/AgAAAAAAAAAIAPD/AgAAAAAAAAAIAPH/AgABAAEAAAAIAPL/AgAAAAAAAAAIAPP/AgAAAAAAAAAIAPT/AgAAAAAAAAAIAPX/AgAAAAAAAAAIAPb/AgAAAAAAAAAIAPf/AgAAAAAAAAAIAPn/AgAAAAAAAAAIAPr/AgAAAAAAAAAIAPv/AgAAAAAAAAAIAPz/AgAAAAAAAAAIAP3/AgAAAAAAAAAIAP7/AgAAAAAAAAAIAP//AgAAAAAAAAAJAO//AgAAAAAAAAAJAPD/AgAAAAAAAAAJAPH/AgABAAEAAAAJAPL/AgAAAAAAAAAJAPP/AgAAAAAAAAAJAPT/AgAAAAAAAAAJAPX/AgAAAAAAAAAJAPb/AgAAAAAAAAAJAPf/AgAAAAAAAAAJAPn/AgAAAAAAAAAJAPr/AgAAAAAAAAAJAPv/AgAAAAAAAAAJAPz/AgAAAAAAAAAJAP3/AgAAAAAAAAAJAP7/AgAAAAAAAAAJAP//AgAAAAAAAAAKAO//AgAAAAAAAAAKAPD/AgAAAAAAAAAKAPH/AgABAAEAAAAKAPL/AgAAAAAAAAAKAPP/AgAAAAAAAAAKAPT/AgAAAAAAAAAKAPX/AgAAAAAAAAAKAPb/AgAAAAAAAAAKAPf/AgAAAAAAAAAKAPn/AgAAAAAAAAAKAPr/AgAAAAAAAAAKAPv/AgAAAAAAAAAKAPz/AgAAAAAAAAAKAP3/AgAAAAAAAAAKAP7/AgAAAAAAAAAKAP//AgAAAAAAAAALAPj/AgABAAEAAAD0/+7/AgABAAEAAAD0/+//AgABAAEAAAD0//D/AgABAAEAAAD0//H/AgABAAEAAAD0//L/AgABAAEAAAD0//P/AgABAAEAAAD0//T/AgABAAEAAAD0//X/AgABAAEAAAD0//b/AgABAAEAAAD0//f/AgABAAEAAAD0//j/AgABAAEAAAD0//n/AgAAAAAAAAD0//r/AgAAAAAAAAD0//v/AgAAAAAAAAD0//z/AgAAAAAAAAD0//3/AgAAAAAAAAD0//7/AgAAAAAAAAD0////AgAAAAAAAAALAO7/AgAAAAAAAAALAO//AgAAAAAAAAALAPD/AgAAAAAAAAALAPH/AgABAAEAAAALAPL/AgAAAAAAAAALAPP/AgAAAAAAAAALAPT/AgAAAAAAAAALAPX/AgAAAAAAAAALAPb/AgAAAAAAAAALAPf/AgAAAAAAAAALAPn/AgAAAAAAAAALAPr/AgAAAAAAAAALAPv/AgAAAAAAAAALAPz/AgAAAAAAAAALAP3/AgAAAAAAAAALAP7/AgAAAAAAAAALAP//AgAAAAAAAAAMAPH/AgABAAEAAAANAPH/AgABAAEAAAAMAP//AgABAAEAAAAMAP7/AgABAAEAAAAMAP3/AgABAAEAAAAMAPz/AgABAAEAAAAMAPv/AgABAAEAAAAMAPr/AgABAAEAAAAMAPn/AgABAAEAAAAMAPf/AgABAAEAAAAMAPb/AgABAAEAAAAMAPX/AgABAAEAAAAMAPT/AgABAAEAAAAMAPP/AgABAAEAAAAMAPL/AgABAAEAAAAMAPD/AgABAAEAAAAMAO//AgABAAEAAAAMAO7/AgABAAEAAAD///X/AgAAAAAAAAD+//X/AgAAAAAAAAD9//X/AgAAAAAAAAD8//X/AgAAAAAAAAD7//X/AgAAAAAAAAD6//X/AgAAAAAAAAD5//X/AgABAAEAAAABAPj/AgAAAAAAAAA=")
tile_set = ExtResource("2_0g2j2")
script = ExtResource("3_rja8f")
metadata/_edit_lock_ = true

[node name="OnScreenChecker" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-7.33137e-07, -72)
scale = Vector2(12.8, 7.2)
metadata/_edit_lock_ = true

[node name="button" parent="." instance=ExtResource("4_685rf")]
position = Vector2(92, -68)
metadata/_edit_lock_ = true

[node name="door" parent="." instance=ExtResource("5_feacu")]
position = Vector2(-52, -68)

[node name="cable1" parent="." groups=["cables"] instance=ExtResource("6_0plre")]
position = Vector2(12, -89)

[connection signal="screen_entered" from="OnScreenChecker" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="OnScreenChecker" to="." method="_on_screen_exited"]
[connection signal="body_shape_entered" from="button" to="." method="_on_button_pressed" unbinds=4]
[connection signal="body_shape_entered" from="button" to="door" method="open" flags=6 unbinds=4]
